--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,13 @@
 
     <!-- Loads the specified .html file -->
     <load src="partials/vite-promo.html" />
+    <load src="partials/modal.html" />
 
     <script type="module" src="/main.js"></script>
     <!-- так підключаємо файли, які на одному рівні зі сторінкою, в даному випадку файл імпортів -->
-    <script type="module" src="./scripts/modal-oneBtn.js"></script>
-    <!-- точкове підключення скриптів, без проміжного імпорту -->
+    <!-- <script type="module" src="./scripts/modal-oneBtn.js"></script> -->
+    <script src="./scripts/modalFewBtn.js"></script>
+    <!-- точкове підк
+      лючення скриптів, без проміного імпорту -->
   </body>
 </html>
